# neural-network

./: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  README.md
.github/workflows/: python.yml  tests.yml
examples/: addingproblem.h  branched_output.h  compound_output_sandwich.h  compound_softmax.h  compound_trivial_softmax.h  copymemory.h  helper.h  lstm.h  lstm_multi.h  main.cpp  multi_output.h  multi_output_gru.h  neuralnetwork.sln  neuralnetwork.vcxproj  repro_issue.h  repro_issue_softmax.h  residualxor.h  spiral.csv  spiral.h  syntheticsentiment.h  threebitparity.h  trivial_softmax.h  twomoon.h  xor.h
include/neuralnetwork/: neuralnetwork.cpp  neuralnetwork.h  neuralnetworkoptions.h  neuron.cpp  neuron.h
include/neuralnetwork/common/: activation.cpp  activation.h  aligned_allocator.h  denormal_disabler.h  evaluationconfig.h  gradientsandoutputs.h  hiddenstate.h  hiddenstates.h  layersandneuronscontainer.h  logger.h  optimiser.h  rng.h  simd_utils.h  taskqueue.h  tempbuffer.h  weightparam.h
include/neuralnetwork/helpers/: adaptivelearningratescheduler.h  errorcalculation.h  neuralnetworkhelper.cpp  neuralnetworkhelper.h  neuralnetworkhelpermetrics.h  neuralnetworkserializer.cpp  neuralnetworkserializer.h  trainingmonitor.h
include/neuralnetwork/layers/: elmanrnnlayer.cpp  elmanrnnlayer.h  fflayer.cpp  fflayer.h  ffoutputlayer.cpp  ffoutputlayer.h  grurnnlayer.cpp  grurnnlayer.h  layer.cpp  layer.h  layerdetails.h  layergradients.h  layers.cpp  layers.h  lstmlayer.cpp  lstmlayer.h  multioutputlayer.h  multioutputlayerdetails.h  outputlayer.h  outputlayerdetails.h  residualprojector.h
include/neuralnetwork/libraries/: TinyJSON.cpp  TinyJSON.h  instrumentor.h
include/neuralnetwork/libraries/tracy/: TracyClient.cpp
include/neuralnetwork/libraries/tracy/client/: TracyAlloc.cpp  TracyArmCpuTable.hpp  TracyCallstack.cpp  TracyCallstack.h  TracyCallstack.hpp  TracyCpuid.hpp  TracyDebug.hpp  TracyDxt1.cpp  TracyDxt1.hpp  TracyFastVector.hpp  TracyKCore.cpp  TracyKCore.hpp  TracyLock.hpp  TracyOverride.cpp  TracyProfiler.cpp  TracyProfiler.hpp  TracyRingBuffer.hpp  TracyRocprof.cpp  TracyScoped.hpp  TracyStringHelpers.hpp  TracySysPower.cpp  TracySysPower.hpp  TracySysTime.cpp  TracySysTime.hpp  TracySysTrace.cpp  TracySysTrace.hpp  TracyThread.hpp  tracy_SPSCQueue.h  tracy_rpmalloc.cpp  tracy_rpmalloc.hpp
include/neuralnetwork/libraries/tracy/common/: TracyAlign.hpp  TracyAlloc.hpp  TracyApi.h  TracyColor.hpp  TracyForceInline.hpp  TracyMutex.hpp  TracyProtocol.hpp  TracyQueue.hpp  TracySocket.cpp  TracySocket.hpp  TracyStackFrames.cpp  TracyStackFrames.hpp  TracySystem.cpp  TracySystem.hpp  TracyUwp.hpp  TracyVersion.hpp  TracyWinFamily.hpp  TracyYield.hpp  tracy_lz4.cpp  tracy_lz4.hpp  tracy_lz4hc.cpp  tracy_lz4hc.hpp
include/neuralnetwork/libraries/tracy/libbacktrace/: alloc.cpp  backtrace.hpp  config.h  dwarf.cpp  elf.cpp  fileline.cpp  filenames.hpp  internal.hpp  macho.cpp  mmapio.cpp  posix.cpp  sort.cpp  state.cpp
include/neuralnetwork/libraries/tracy/tracy/: Tracy.hpp  TracyC.h  TracyCUDA.hpp  TracyD3D11.hpp  TracyD3D12.hpp  TracyLua.hpp  TracyOpenCL.hpp  TracyOpenGL.hpp  TracyVulkan.hpp
python/: README.md  bindings.cpp  example.py  import_check.py  neuralnetwork_py.sln  neuralnetwork_py.vcxproj
src/neuralnetwork/: activation.cpp  activation.h  adaptivelearningratescheduler.h  aligned_allocator.h  baselayer.h  branchedoutputlayer.h  elmanrnnlayer.cpp  elmanrnnlayer.h  errorcalculation.h  evaluationconfig.h  fflayer.cpp  fflayer.h  ffoutputlayer.cpp  ffoutputlayer.h  gradientsandoutputs.h  grurnnlayer.cpp  grurnnlayer.h  hiddenstate.h  hiddenstates.h  layer.cpp  layer.h  layerdetails.h  layergradients.h  layers.cpp  layers.h  layersandneuronscontainer.h  logger.h  lstmlayer.cpp  lstmlayer.h  main.cpp  multioutputlayer.h  multioutputlayerdetails.h  neuralnetwork.cpp  neuralnetwork.h  neuralnetwork.sln  neuralnetwork.vcxproj  neuralnetwork_layer.cpp  neuralnetwork_layer.h  neuralnetworkhelper.cpp  neuralnetworkhelper.h  (+19 more)
src/neuralnetwork/examples/: addingproblem.h  branched_output.h  compound_output_sandwich.h  compound_softmax.h  compound_trivial_softmax.h  copymemory.h  helper.h  lstm.h  lstm_multi.h  lstm_test.h  multi_output.h  multi_output_gru.h  repro_issue.h  repro_issue_softmax.h  residualxor.h  spiral.h  syntheticsentiment.h  threebitparity.h  trivial_softmax.h  two_moons.csv  two_moons_test.csv  twomoon.h  xor.h
src/neuralnetwork/libraries/: TinyJSON.cpp  TinyJSON.h  instrumentor.h
tests/: CMakeLists.txt  README.md  activation_tests.cpp  adaptive_learning_rate_scheduler_tests.cpp  aligned_allocator_tests.cpp  elmanrnnlayer_mt_tests.cpp  elmanrnnlayer_tests.cpp  error_calculation_tests.cpp  fflayer_mt_tests.cpp  fflayer_tests.cpp  ffoutputlayer_mt_tests.cpp  ffoutputlayer_tests.cpp  gradients_and_outputs_tests.cpp  grurnnlayer_mt_tests.cpp  grurnnlayer_tests.cpp  hidden_state_tests.cpp  layer_details_tests.cpp  layer_optimizer_tests.cpp  layer_tests.cpp  layers_and_neurons_container_tests.cpp  learning_rate_tests.cpp  lstmlayer_mt_tests.cpp  lstmlayer_tests.cpp  multioutputlayer_tests.cpp  network_integration_tests.cpp  neuralnetwork.cpp  neuralnetwork_tests.cpp  neuralnetwork_tests.vcxproj  neuralnetworkhelper_tests.cpp  neuron_tests.cpp  output_layer_details_tests.cpp  simd_utils_mt_tests.cpp  simd_utils_tests.cpp  taskqueue_comprehensive_tests.cpp  taskqueue_tests.cpp  test_helper.h  trainingmonitor_tests.cpp  weight_param_tests.cpp
